--- a/assignment/test-output/old/Default suite/methods.html
+++ b/assignment/test-output/old/Default suite/methods.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b19bbd">  <td>23/05/12 12:46:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignment.Login()[pri:2, instance:com.demoblaze.smoke.Assignment@750e2b97]">Login</td> 
-  <td>main@1314838582</td>   <td></td> </tr>
-<tr bgcolor="b19bbd">  <td>23/05/12 12:46:15</td>   <td>12497</td> <td title="&lt;&lt;Assignment.after_suite()[pri:0, instance:com.demoblaze.smoke.Assignment@750e2b97]">&lt;&lt;after_suite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1314838582</td>   <td></td> </tr>
-<tr bgcolor="b19bbd">  <td>23/05/12 12:45:53</td>   <td>-9297</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Assignment.beforeClass()[pri:0, instance:com.demoblaze.smoke.Assignment@750e2b97]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1314838582</td>   <td></td> </tr>
-<tr bgcolor="b19bbd">  <td>23/05/12 12:45:58</td>   <td>-3665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignment.Register()[pri:1, instance:com.demoblaze.smoke.Assignment@750e2b97]">Register</td> 
-  <td>main@1314838582</td>   <td></td> </tr>
-<tr bgcolor="b19bbd">  <td>23/05/12 12:45:57</td>   <td>-4826</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignment.openDemoblazeSite()[pri:0, instance:com.demoblaze.smoke.Assignment@750e2b97]">openDemoblazeSite</td> 
-  <td>main@1314838582</td>   <td></td> </tr>
-<tr bgcolor="b19bbd">  <td>23/05/12 12:46:06</td>   <td>4293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignment.addItem()[pri:4, instance:com.demoblaze.smoke.Assignment@750e2b97]">addItem</td> 
-  <td>main@1314838582</td>   <td></td> </tr>
-<tr bgcolor="b19bbd">  <td>23/05/12 12:46:09</td>   <td>7307</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignment.RemoveItemFromCart()[pri:5, instance:com.demoblaze.smoke.Assignment@750e2b97]">RemoveItemFromCart</td> 
-  <td>main@1314838582</td>   <td></td> </tr>
-<tr bgcolor="b19bbd">  <td>23/05/12 12:46:09</td>   <td>7317</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignment.checkout()[pri:6, instance:com.demoblaze.smoke.Assignment@750e2b97]">checkout</td> 
-  <td>main@1314838582</td>   <td></td> </tr>
-<tr bgcolor="b19bbd">  <td>23/05/12 12:46:05</td>   <td>3081</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignment.CategoriesItem()[pri:3, instance:com.demoblaze.smoke.Assignment@750e2b97]">CategoriesItem</td> 
-  <td>main@1314838582</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>23/05/12 14:07:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignment.Login()[pri:2, instance:com.demoblaze.smoke.Assignment@f09733f]">Login</td> 
+  <td>main@1924949331</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>23/05/12 14:08:17</td>   <td>28269</td> <td title="&lt;&lt;Assignment.after_suite()[pri:0, instance:com.demoblaze.smoke.Assignment@f09733f]">&lt;&lt;after_suite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1924949331</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>23/05/12 14:08:02</td>   <td>13104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignment.RemoveItemFromCart()[pri:5, instance:com.demoblaze.smoke.Assignment@f09733f]">RemoveItemFromCart</td> 
+  <td>main@1924949331</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>23/05/12 14:07:54</td>   <td>4371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignment.addItem()[pri:4, instance:com.demoblaze.smoke.Assignment@f09733f]">addItem</td> 
+  <td>main@1924949331</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>23/05/12 14:07:46</td>   <td>-3612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignment.Register()[pri:1, instance:com.demoblaze.smoke.Assignment@f09733f]">Register</td> 
+  <td>main@1924949331</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>23/05/12 14:07:44</td>   <td>-4883</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignment.openDemoblazeSite()[pri:0, instance:com.demoblaze.smoke.Assignment@f09733f]">openDemoblazeSite</td> 
+  <td>main@1924949331</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>23/05/12 14:08:02</td>   <td>13140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignment.checkout()[pri:6, instance:com.demoblaze.smoke.Assignment@f09733f]">checkout</td> 
+  <td>main@1924949331</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>23/05/12 14:07:40</td>   <td>-8762</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Assignment.beforeClass()[pri:0, instance:com.demoblaze.smoke.Assignment@f09733f]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1924949331</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>23/05/12 14:07:52</td>   <td>3092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignment.CategoriesItem()[pri:3, instance:com.demoblaze.smoke.Assignment@f09733f]">CategoriesItem</td> 
+  <td>main@1924949331</td>   <td></td> </tr>
 </table>
